--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,10 @@ a {
   box-sizing: border-box;
 }
 
+.preview-btn {
+  margin: 4px 10px;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
